# mct2-smec

./: .gitmodules  README.md
assets/emb_graphics_demo/: .gitignore  Cargo.toml  ter_u20b.rs
assets/emb_graphics_demo/src/: main.rs
assets/splash/: splash_logo_only_820x320.xcf
