[package]
name = "smec-eg-demo"
version = "0.1.0"
edition = "2021"
publish = false
license = "CC0"

[dependencies]
chrono = "0.4.38"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
embedded-layout = "0.4.1"
embedded-text = "0.7.2"
tinybmp = "0.6.0"
tinytga = "0.5.0"
u8g2-fonts = "0.4.0"